30-12_FIX_Ajustes_itens
